<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="quel est le nom de cet animal"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        />

    <ImageView
        android:id="@+id/image_view5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="imageview"

        />

    <CheckBox android:id="@+id/checkbox13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elephant"


        />
    <CheckBox android:id="@+id/checkbox14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cercle"


        />

    <CheckBox android:id="@+id/checkbox15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tigre"

        />
    <ImageView
        android:id="@+id/image_view6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="imageview"

        />

    <CheckBox android:id="@+id/checkbox16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elephant"


        />
    <CheckBox android:id="@+id/checkbox17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chien"


        />

    <CheckBox android:id="@+id/checkbox18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tigre"

        />
    <Button
        android:id="@+id/verifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="verifier"
        android:backgroundTint="#551E1E"/>
    <Button
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="retour"
        android:backgroundTint="#915757"/>
</androidx.appcompat.widget.LinearLayoutCompat>